--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.3.1",
     "config": "^3.2.2",
     "eslint": "^5.16.0",
     "express": "^4.17.1",
@@ -20,6 +21,8 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.6",
+    "node-sass": "^4.12.0",
+    "react-bootstrap": "^1.0.0-beta.10",
     "request": "^2.88.0"
   },
   "devDependencies": {
