--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.1.1",
     "gravatar": "^1.8.0",
+    "helmet": "^3.20.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.6",
     "morgan": "^1.9.1",
