--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.7",
+    "react-google-recaptcha": "^2.0.0-rc.1",
     "react-image-mapper": "^0.0.14",
     "react-moment": "^0.9.2",
     "react-places-autocomplete": "^7.2.1",
